--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Bitter', serif;
-    background-image: url("https://ak3.picdn.net/shutterstock/videos/18957503/thumb/1.jpg?i10c=img.resize(height:160)");
+    background-color: gray;
     color: white;
     text-align: center;
 }
