allows users to enter their favorite color

--- a/index.css
+++ b/index.css
@@ -10,11 +10,14 @@ body {
     font-family: 'Bitter', serif;
     background-color: gray;
     color: white;
-    text-align: center;
 }
 
 h1 {
     font-size: 100px;
+}
+
+label {
+    width: 100px;
 }
 
 input, 
